@@ -370,3 +370,5 @@
 	* Add a ramdisk block driver
 
 0.3.12 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* Improved solution to POSIX timer lifetime controls bug fixed in 0.3.11.
